# prime-differences

./: .clang-format  .gitignore  .pre-commit-config.yaml  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
benchmark/: benchmark.cpp
scripts/: apply_license_headers.sh  benchmark_parameters.sh  benchmark_variants.sh
src/: bits.hpp  main.cpp  parsing.cpp  parsing.hpp  state.cpp  state.hpp  sys_info.cpp  sys_info.hpp  types.hpp  utils.cpp  utils.hpp  worker.cpp  worker.hpp  worker_baseline.cpp  worker_baseline.hpp  worker_impl.hpp  worker_optimized.cpp  worker_optimized.hpp
tests/: main_test.cpp  test_bits.cpp  test_integration.cpp  test_optimized.cpp  test_parsing.cpp  test_performance.cpp  test_state.cpp  test_utils.cpp  test_validation.cpp  test_verification.cpp
